--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
     width: 100%;
     height: 100%;
+    font-size: 12px;
 }
 
 .homepage-loading {
@@ -25,12 +26,12 @@
 .Menu-Circle {
     z-index: -1;
     background-color: rgb(153, 65, 65);
-    width: 90rem;
-    height: 45rem;
+    width: 70%;
+    height: 74%;
     border-radius: 50% 50% 0 0 / 100% 100% 0 0;
     position: fixed;
     overflow: hidden;
-    top: 48rem;
+    top: 75%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
@@ -38,7 +39,7 @@
 
 .Smiley-Face {
     font-size: 17em;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'courier', Arial, Helvetica, sans-serif;
     top: 66%;
     text-align: center;
     position: absolute;
@@ -53,7 +54,7 @@
     }
 
     50% {
-        transform: translate(240%, 0);
+        transform: translate(340%, 0);
     }
 }
 
@@ -64,12 +65,12 @@
     }
 
     50% {
-        transform: translate(240%, 0);
+        transform: translate(340%, 0);
     }
 }
 
 .Flying-Kana-Container {
-    font-size: 30px;
+    font-size: 4em;
     color: black;
     position: fixed;
     overflow: hidden;
@@ -84,7 +85,9 @@
     left: -10%;
     transform: scale(1);
     will-change: transform;
-    animation: flying-kana-3 10s linear infinite;
+    animation: flying-kana-2 12s linear infinite;
+    animation-delay: 8s;
+    -webkit-animation: flying-kana-2 12s linear infinite;
 }
 
 .flying-kana-2 {
@@ -92,7 +95,8 @@
     top: 15%;
     left: -10%;
     transform: scale(1.5);
-    animation: flying-kana-3 15s linear infinite;
+    animation: flying-kana-3 16s linear infinite;
+    -webkit-animation: flying-kana-3 16s linear infinite;
 }
 
 .flying-kana-3 {
@@ -100,7 +104,8 @@
     top: 25%;
     left: -10%;
     transform: scale(3.5);
-    animation: flying-kana-3 12s linear infinite;
+    animation: flying-kana-2 30s linear infinite;
+    -webkit-animation: flying-kana-2 30s linear infinite;
 }
 
 .flying-kana-4 {
@@ -108,7 +113,9 @@
     top: 35%;
     left: -10%;
     transform: scale(1);
-    animation: flying-kana-3 18s linear infinite;
+    animation: flying-kana-3 20s linear infinite;
+    animation-delay: 5s;
+    -webkit-animation: flying-kana-3 20s linear infinite;
 }
 
 .flying-kana-5 {
@@ -116,115 +123,67 @@
     top: 45%;
     left: -10%;
     transform: scale(5);
-    animation: flying-kana-3 16s linear infinite;
+    animation: flying-kana-2 24s linear infinite;
+    -webkit-animation: flying-kana-2 24s linear infinite;
 }
 
-@-webkit-keyframes flying-kana-1 {
+@-webkit-keyframes flying-kana-2 {
     0% {
-        transform: scale(0.3) translateX(-10vw);
+        transform: translateY(10vh) translateX(0vw);
     }
-
-    10% {
-        transform: translateY(2vh) translateX(10vw) scale(1.4);
-    }
-
-    20% {
-        transform: translateY(0vh) translateX(30vw) scale(1.5);
-    }
-
-    30% {
-        transform: translateY(4vh) translateX(50vw) scale(1.6);
-    }
-
-    40% {
-        transform: translateY(2vh) translateX(70vw) scale(1.6);
+    25% {
+        transform: translateY(15vh) translateX(30vw);
     }
 
     50% {
-        transform: translateY(0vh) translateX(90vw) scale(1.6);
+        transform: translateY(12vh) translateX(60vw);
     }
 
-    60% {
-        transform: translateY(0vh) translateX(110vw) scale(1.6);
-    }
-
-    100% {
-        transform: translateY(0vh) translateX(150vw) scale(1.6);
-    }
-}
-
-@keyframes flying-kana-1 {
-    10% {
-        transform: translateY(2vh) translateX(10vw) scale(1.4);
-    }
-
-    20% {
-        transform: translateY(0vh) translateX(30vw) scale(1.5);
-    }
-
-    30% {
-        transform: translateY(4vh) translateX(50vw) scale(1.6);
-    }
-
-    40% {
-        transform: translateY(2vh) translateX(70vw) scale(1.6);
-    }
-
-    50% {
-        transform: translateY(0vh) translateX(90vw) scale(1.6);
-    }
-
-    60% {
-        transform: translateY(0vh) translateX(110vw) scale(1.6);
+    75% {
+        transform: translateY(18vh) translateX(90vw);
     }
 
     100% {
-        transform: translateY(0vh) translateX(150vw) scale(1.6);
+        transform: translateY(12vh) translateX(120vw);
     }
 }
 
 @keyframes flying-kana-2 {
     0% {
-        transform: translateY(10vh) translateX(0vw) scale(1.4);
+        transform: translateY(10vh) translateX(0vw);
     }
-    10% {
-        transform: translateY(11vh) translateX(20vw) scale(1.4);
+    25% {
+        transform: translateY(15vh) translateX(30vw);
     }
-
-    20% {
-        transform: translateY(12vh) translateX(30vw) scale(1.5);
-    }
-
-    30% {
-        transform: translateY(13vh) translateX(50vw) scale(1.6);
-    }
-
-    40% {
-        transform: translateY(14vh) translateX(70vw) scale(1.6);
-    }
-
     50% {
-        transform: translateY(15vh) translateX(90vw) scale(1.6);
+        transform: translateY(12vh) translateX(60vw);
     }
-
-    60% {
-        transform: translateY(13vh) translateX(110vw) scale(1.6);
-    }
-
-    70% {
-        transform: translateY(15vh) translateX(130vw) scale(1.6);
-    }
-
-    80% {
-        transform: translateY(16vh) translateX(150vw) scale(1.6);
-    }
-
-    90% {
-        transform: translateY(13vh) translateX(170vw) scale(1.6);
+    75% {
+        transform: translateY(18vh) translateX(90vw);
     }
 
     100% {
-        transform: translateY(10vh) translateX(190vw) scale(1.6);
+        transform: translateY(12vh) translateX(120vw);
+    }
+}
+
+@-webkit-keyframes flying-kana-3 {
+    0% {
+        transform: translateY(10vh) translateX(0vw);
+    }
+    25% {
+        transform: translateY(14vh) translateX(30vw);
+    }
+    50% {
+        transform: translateY(17vh) translateX(60vw);
+    }
+
+    75% {
+        transform: translateY(12vh) translateX(90vw);
+    }
+
+    100% {
+        transform: translateY(8vh) translateX(120vw);
     }
 }
 
@@ -235,7 +194,6 @@
     25% {
         transform: translateY(14vh) translateX(30vw);
     }
-
     50% {
         transform: translateY(17vh) translateX(60vw);
     }
@@ -245,6 +203,6 @@
     }
 
     100% {
-        transform: translateY(16vh) translateX(120vw);
+        transform: translateY(8vh) translateX(120vw);
     }
 }
